# UnixToIFCTime

./: README.md  pyproject.toml  unixToIfcTime.py
tests/: test_cli.py  test_core.py
